2011-02-24  Eric Seidel  <eric@webkit.org>

Reviewed by Adam Barth.

        Fragment parsing does not need to use HTMLSourceTracker
        https://bugs.webkit.org/show_bug.cgi?id=55011

        Remove support of XSS-filtering innerHTML content.

        * http/tests/security/xssAuditor/dom-write-innerHTML-expected.txt:
2011-02-24  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Fragment parsing does not need to use HTMLSourceTracker
        https://bugs.webkit.org/show_bug.cgi?id=55011

        Any performance gains from this patch are likely
        the result of working around:
        https://bugs.webkit.org/show_bug.cgi?id=55005
        (Which suggests that fixing bug 55005 will speed
        up normal HTML parsing substantially.)

        Assuming I ran the numbers correct, here is the
        change from PerformanceTests/Parser/tiny-innerHTML:
        Before patch:
        avg 5586.1
        median 5594
        stdev 41.295157101045135
        min 5425
        max 5633

        After Patch:
        avg 2603.9
        median 2609.5
        stdev 32.500615378789355
        min 2475
        max 2649

        Removing just the HTMLSourceTracker calls brought our
        score from 5500 to 5200, removing the XSSFilter as well
        brought it to 2600 on my machine.

        * html/parser/HTMLDocumentParser.cpp:
        (WebCore::HTMLDocumentParser::HTMLDocumentParser):
        (WebCore::HTMLDocumentParser::pumpTokenizer):
        * html/parser/HTMLDocumentParser.h:

Canonical link: https://commits.webkit.org/69474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79554 268f45cc-cd09-0410-ab3c-d52691b4dbfc