Source/WebCore/html/parser/HTMLDocumentParser.h
@@ -131,6 +131,7 @@ private:
     void attemptToRunDeferredScriptsAndEnd();
     void end();
 
+    bool isParsingFragment() const;
     bool isScheduledForResume() const;
     bool inScriptExecution() const;
     bool inWrite() const { return m_writeNestingLevel > 0; }
